--- a/mine/gpu.ipynb
+++ b/mine/gpu.ipynb
@@ -10,16 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wed Jul 23 22:59:59 2025       \n",
+      "Wed Jul 30 15:46:04 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 576.40                 Driver Version: 576.40         CUDA Version: 12.9     |\n",
+      "| NVIDIA-SMI 576.57                 Driver Version: 576.57         CUDA Version: 12.9     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
       "| GPU  Name                  Driver-Model | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
       "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
-      "|   0  NVIDIA GeForce RTX 3060 ...  WDDM  |   00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   46C    P8             12W /   80W |      16MiB /   6144MiB |      0%      Default |\n",
+      "|   0  NVIDIA GeForce RTX 3060 ...  WDDM  |   00000000:01:00.0  On |                  N/A |\n",
+      "| N/A   50C    P8             13W /   80W |     312MiB /   6144MiB |     23%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "                                                                                         \n",
@@ -28,9 +28,6 @@
       "|  GPU   GI   CI              PID   Type   Process name                        GPU Memory |\n",
       "|        ID   ID                                                               Usage      |\n",
       "|=========================================================================================|\n",
-      "|    0   N/A  N/A           26060    C+G   ...em32\\ApplicationFrameHost.exe      N/A      |\n",
-      "|    0   N/A  N/A           28404    C+G   ...lpaper_engine\\wallpaper32.exe      N/A      |\n",
-      "|    0   N/A  N/A           28632    C+G   ...s\\Win64\\EpicGamesLauncher.exe      N/A      |\n",
       "+-----------------------------------------------------------------------------------------+\n"
      ]
     }
@@ -41,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "12b910b9",
    "metadata": {},
    "outputs": [],
@@ -52,17 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c3eddb27",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,17 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fbb3d436",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +92,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "d2l",
+   "display_name": "d2l_test",
    "language": "python",
    "name": "python3"
   },
